Добавлены: Создание дисиципины, Удаление дисциплины, Модификация дисциплины, Фильтр логин

--- a/src/main/webapp/resourse/css/style.css
+++ b/src/main/webapp/resourse/css/style.css
@@ -530,6 +530,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: auto;
 }
 
 .button_terms {
