--- a/src/main/webapp/resourse/css/style.css
+++ b/src/main/webapp/resourse/css/style.css
@@ -530,7 +530,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: auto;
+
 }
 
 .button_terms {
@@ -600,4 +600,8 @@ h4 {
 
 .rus-lang-message{
     @charset "UTF-8";
+}
+
+.table-pad-marg{
+    margin-right: 17%;
 }
